# hipscat-import

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  index.json  info.json  pyproject.toml  regressions.xml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: build-documentation.yml  code_style.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml  type-checking.yml
_results/: benchmarks.json
_results/gh-runner/: 01f2120f-virtualenv-py3.10-Cython-build-packaging.json  022e7cf9-virtualenv-py3.10-Cython-build-packaging.json  04c1a8fc-virtualenv-py3.10-Cython-build-packaging.json  0629cb4c-virtualenv-py3.10-Cython-build-packaging.json  06b8379f-virtualenv-py3.10-Cython-build-packaging.json  087754f9-virtualenv-py3.10-Cython-build-packaging.json  0ae66573-virtualenv-py3.10-Cython-build-packaging.json  0af18cd4-virtualenv-py3.10-Cython-build-packaging.json  0ba5bcb9-virtualenv-py3.10-Cython-build-packaging.json  11986ddb-virtualenv-py3.10-Cython-build-packaging.json  151d2ede-virtualenv-py3.10-Cython-build-packaging.json  1555ca22-virtualenv-py3.10-Cython-build-packaging.json  19cefb46-virtualenv-py3.10-Cython-build-packaging.json  1a27d41a-virtualenv-py3.10-Cython-build-packaging.json  1c230c21-virtualenv-py3.10-Cython-build-packaging.json  1de60fd8-virtualenv-py3.10-Cython-build-packaging.json  1f351878-virtualenv-py3.10-Cython-build-packaging.json  2047194a-virtualenv-py3.10-Cython-build-packaging.json  205818af-virtualenv-py3.10-Cython-build-packaging.json  22214386-virtualenv-py3.10-Cython-build-packaging.json  22cba75c-virtualenv-py3.10-Cython-build-packaging.json  22f90644-virtualenv-py3.10-Cython-build-packaging.json  239f982b-virtualenv-py3.10-Cython-build-packaging.json  24b0cb4b-virtualenv-py3.10-Cython-build-packaging.json  277d8014-virtualenv-py3.10-Cython-build-packaging.json  2802d8ca-virtualenv-py3.10-Cython-build-packaging.json  28af48b5-virtualenv-py3.10-Cython-build-packaging.json  2a19bd53-virtualenv-py3.10-Cython-build-packaging.json  2a476a84-virtualenv-py3.10-Cython-build-packaging.json  2ab2bde9-virtualenv-py3.10-Cython-build-packaging.json  2bbac90d-virtualenv-py3.10-Cython-build-packaging.json  2ccf71e4-virtualenv-py3.10-Cython-build-packaging.json  2d44b995-virtualenv-py3.10-Cython-build-packaging.json  314a79a8-virtualenv-py3.10-Cython-build-packaging.json  328b9fcb-virtualenv-py3.10-Cython-build-packaging.json  33194035-virtualenv-py3.10-Cython-build-packaging.json  33b89b2b-virtualenv-py3.10-Cython-build-packaging.json  33d70e79-virtualenv-py3.10-Cython-build-packaging.json  343431e1-virtualenv-py3.10-Cython-build-packaging.json  3475a72e-virtualenv-py3.10-Cython-build-packaging.json  (+183 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: Makefile  conf.py  index.rst  notebooks.rst  requirements.txt
docs/catalogs/: advanced.rst  allwise.rst  arguments.rst  debug.rst  neowise.rst  overview.rst  resume.rst  temp_files.rst  tic.rst
docs/catalogs/public/: allwise.rst  index.rst  neowise.rst  panstarrs.rst  sdss.rst  tic.rst  zubercal.rst
docs/guide/: association.rst  catalog_arguments.rst  command_line.rst  contact.rst  contributing.rst  dask_on_ray.rst  index_table.rst  margin_cache.rst  overview.rst  resume.rst
docs/notebooks/: estimate_pixel_threshold.ipynb  intro_notebook.ipynb  unequal_schema.ipynb
docs/static/: allwise_schema.parquet  allwise_types.csv  neowise_schema.parquet  neowise_types.csv  ps1_detections_types.csv  ps1_forced_mean_object_types.csv  ps1_otmo_types.csv  ps1_stack_object_types.csv  sdss_wget.bash  tic_schema.parquet  tic_types.csv
nb/: sample_import.ipynb
src/: .pylintrc
src/hats_import/: __init__.py  pipeline.py  pipeline_resume_plan.py  runtime_arguments.py
src/hats_import/catalog/: arguments.py  file_readers.py  map_reduce.py  resume_plan.py  run_import.py  sparse_histogram.py
src/hats_import/hipscat_conversion/: __init__.py  arguments.py  run_conversion.py
src/hats_import/index/: __init__.py  arguments.py  map_reduce.py  run_index.py
src/hats_import/margin_cache/: __init__.py  margin_cache.py  margin_cache_arguments.py  margin_cache_map_reduce.py  margin_cache_resume_plan.py
src/hats_import/soap/: arguments.py  map_reduce.py  resume_plan.py  run_soap.py
src/hats_import/verification/: arguments.py  run_verification.py
src/hipscat_import/: __init__.py  __main__.py  arguments.py  command_line_arguments.py  control.py  dask_map_reduce.py  file_readers.py  map_reduce.py  pipeline.py  pipeline_plan.py  pipeline_resume_plan.py  resume_files.py  run_import.py  runtime_arguments.py
src/hipscat_import/association/: __init__.py  arguments.py  map_reduce.py  run_association.py
src/hipscat_import/catalog/: __init__.py  arguments.py  command_line_arguments.py  file_readers.py  map_reduce.py  margin_cache.py  margin_cache_arguments.py  ray_import.py  ray_map_reduce.py  resume_files.py  resume_plan.py  run_import.py  sparse_histogram.py
src/hipscat_import/cross_match/: macauff_arguments.py  macauff_map_reduce.py  macauff_metadata.py  macauff_resume_plan.py  run_macauff_import.py
src/hipscat_import/index/: __init__.py  arguments.py  map_reduce.py  run_index.py
src/hipscat_import/margin_cache/: __init__.py  margin_cache.py  margin_cache_arguments.py  margin_cache_map_reduce.py  margin_cache_resume_plan.py
src/hipscat_import/soap/: __init__.py  arguments.py  map_reduce.py  resume_plan.py  run_soap.py
src/hipscat_import/verification/: arguments.py  run_verification.py
tests/: .pylintrc  conftest.py
tests/data/: generate_data.ipynb
tests/data/indexed_files/: csv_list_double_1_of_2.txt  csv_list_double_2_of_2.txt  (+2 more)
tests/hats_import/: conftest.py  test_packaging.py  test_pipeline_resume_plan.py  test_runtime_arguments.py
tests/hipscat_import/: conftest.py  data_paths.py  test_argument_validation.py  test_arguments_commandline.py  test_dask_map_reduce.py  test_file_readers.py  test_map_reduce.py  test_packaging.py  test_pipeline_resume_plan.py  test_resume_files.py  test_run_import.py  test_runtime_arguments.py
(+215 files in other folders)
